--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.2.8+4
+  sqflite: ^2.1.0
   path: ^1.8.2
+  provider: ^6.0.3
   intl: ^0.17.0
-  provider: ^6.0.5
-  fl_chart: ^0.62.0
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
